force-app/main/default/objects/custom_create295__c/custom_create295__c.object-meta.xml
<CustomObject>
    <label>Custom created object295</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects295</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>