force-app/main/default/objects/custom_create295__c/fields/custom_create_295field543__c.field-meta.xml
<CustomField>
    <fullName>custom_create_295field543__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 295field543</label>
    <type>Checkbox</type>
</CustomField>